--- a/index.html
+++ b/index.html
@@ -5,44 +5,102 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Animate.</title>
     <link rel="stylesheet" href="./style.css" />
+    <link href="https://fonts.cdnfonts.com/css/carpenter" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1 class="counter">0</h1>
+    <div class="first-page">
+      <h1 class="counter">0</h1>
 
-    <div class="overlay">
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
-    </div>
+      <div class="overlay">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
 
-    <div class="container">
-      <nav>
-        <div>
-          <a href="#">Sobre</a>
-          <a href="#">Contato</a>
+      <div class="container">
+        <div class="header">
+          <div class="h1">t</div>
+          <div class="h1">a</div>
+          <div class="h1">t</div>
+          <div class="h1">i</div>
+          <div class="h1">.</div>
         </div>
-        <div>
-          <a href="#">Playground</a>
+        <div class="hero">
+          <img src="./img/art.jpg" />
         </div>
-      </nav>
-
-      <div class="header">
-        <div class="h1">f</div>
-        <div class="h1">l</div>
-        <div class="h1">a</div>
-        <div class="h1">u</div>
-        <div class="h1">t</div>
-        <div class="h1">.</div>
       </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.3/gsap.min.js"></script>
+
+    <script>
+      function startLoader() {
+        let counterElement = document.querySelector(".counter");
+        let currentValue = 0;
+
+        function updateCounter() {
+          if (currentValue === 100) {
+            return;
+          }
+
+          currentValue += Math.floor(Math.random() * 10) + 1;
+
+          if (currentValue > 100) {
+            currentValue = 100;
+          }
+
+          counterElement.textContent = currentValue;
+
+          let delay = Math.floor(Math.random() * 200) + 50;
+          setTimeout(updateCounter, delay);
+        }
+
+        updateCounter();
+      }
+
+      startLoader();
+
+      gsap.to(".counter", 0.25, {
+        delay: 3.5,
+        opacity: 0,
+      });
+
+      gsap.to(".bar", 1.5, {
+        delay: 3.5,
+        height: 0,
+        stagger: {
+          amount: 0.5,
+        },
+        ease: "power4.inOut",
+      });
+
+      gsap.from(".h1", 1.5, {
+        delay: 4,
+        y: 700,
+        stagger: {
+          amount: 0.5,
+        },
+        ease: "power4.inOut",
+      });
+
+      gsap.from(".hero", 2, {
+        delay: 4.5,
+        y: 400,
+        ease: "power4.inOut",
+      });
+    </script>
   </body>
 </html>
